# netsquid-qswitch

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Makefile  README.md  data_T2_vs_fidelity.csv  data_buffer_size_vs_capacity.csv  data_connect_size_vs_capacity.csv  requirements.txt  setup.cfg
docs/: Makefile  api.rst  conf.py  index.rst
docs/modules/: modules.rst  netsquid_qswitch.rst
examples/: example_T2_vs_fidelity.py  example_buffer_size_vs_capacity.py  example_capacity_vs_buffersize.py  example_connect_size_vs_capacity.py  plot_impacts_capacity_vs_buffer.py
netsquid_qswitch/: aux_functions.py  memory_management.py  network.py  plot_csv_with_errorbars.py  protocols.py  quantum_programs.py  runtools.py
tests/: test_aux_functions.py  test_memory_management.py  test_network.py  test_protocols.py  test_runtools.py
