
[metadata]
name = netsquid-qswitch
version = 1.0.1
author = Tim Coopmans
author-email = t.j.coopmans@tudelft.nl
description = Tools for simulating a quantum switch node.
license = Apache-2.0
home-page = https://gitlab.com/softwarequtech/netsquid-snippets/netsquid-qswitch

[netsquid]
pypi-server = pypi.netsquid.org
